[package]
name = "hello"
version = "0.1.0"
authors = ["Jun Ito <jun_ito@voyagegroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
reqwest = "0.10"
tokio = { version = "0.2", features = ["full"]}
rusqlite = "0.23"